added routes to swagger.yml file
